--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -8,8 +8,9 @@
 
 .footerMAinSection{
     width: 100%;
-    height: 10rem;
+    /* height: 10rem; */
     background-color: var(--black);
+    margin-top: 10px;
 }
 
 .footerSectionPages{
@@ -37,3 +38,7 @@
 .FooterCopyRight{
     color: var(--purple);
 }
+@media screen and (max-width: 500px) {
+.foooterColumn{
+    flex-direction: column;
+}}
