--- a/src/styles/home/homeCmp.css
+++ b/src/styles/home/homeCmp.css
@@ -20,6 +20,16 @@
     width: 40vw;
 }
 
+@media screen and (max-width: 700px) {
+    .section-2{
+        display: none;
+    }
+    .section-1{
+        width: 100vw;
+        padding-left: 20px;
+    }
+  }
+
 .MainImgHomePAgeImg{
     width: 80%;
     height: 50vh;
