--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -9,8 +9,16 @@
 
 .navbar-Section{
     width: 100%;
-    height: 7vh;
+    /* height: 7vh; */
     background-color:var(--orange) ;
+    
+}
+
+@media screen and (max-width: 700px) {
+    .navbar-Section{
+        flex-direction: column;
+        padding-bottom: 10px;
+    }
 }
 
 .Nav-links-actions ul{
