--- a/src/styles/products/product.css
+++ b/src/styles/products/product.css
@@ -1,14 +1,19 @@
 .ProductsMainSection{
     width: 100%;
-    height: 43rem;
+    /* height: 43rem; */
 }
 
 .ShowCaseSection{
     width: 100%;
-    /* overflow-y: scroll; */
-    height: 40rem;
+    overflow-y: scroll;
+    height: 100%;
 }
 
 .line{
-    height: 40rem;
+    height: 100%;
+}
+@media screen and (max-width: 700px) {
+    .ShowCaseSection{
+        margin-top: 10px;
+    }
 }
