--- a/src/styles/singleProduct/Style.css
+++ b/src/styles/singleProduct/Style.css
@@ -1,6 +1,6 @@
 .SinglePrductPageSection{
     width: 100%;
-    height: 29rem;
+    /* height: 29rem; */
 }
 .singleProductPageSection-1{
     width: 30%;
@@ -12,9 +12,16 @@
 
 .singleProductPageSection-1 img{
     width: 80%;
-    height: 20rem;
+    /* height: 20rem; */
 }
 
 .SingleDescription{
     width: 100%;
+}
+
+@media screen and (max-width: 700px) {
+.SinglePrductPageSection{
+    flex-direction: column;
+}
+    
 }
